[package]
name = "tinywar"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "debug",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "serialize",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd_rust",
]}
bevy_ecs_tiled = "0.10.0"
bevy_kira_audio = "0.24.0"
bevy_tweening = "0.14.0"
itertools = "0.14.0"
pathfinding = "4.14.0"
rand = "0.9.2"
regex = "1.12.2"
serde = "1.0.228"
strum = "0.27.2"
strum_macros = "0.27.2"

[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25.9"
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_renet = "3.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
rfd = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ecs_tiled = { version = "0.10.0", features = ["wasm"] }
# Used by `rand` and requires feature flag for wasm
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
module_inception = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
